Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/InterfaceInInner.out
- compiler.warn.source.no.system.modules.path: 15
InterfaceInInner.java:13:13: compiler.err.icls.cant.have.static.decl: foo
1 error
1 warning
